# CIRISEdge

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MISSION.md  README.md  build.rs  deny.toml  pyproject.toml  rust-toolchain.toml  uniffi.toml
.github/actions/ciriscache/: action.yml
.github/actions/setup-sccache/: action.yml
.github/scripts/: check_cargo_pyproject_skew.py
.github/workflows/: bench.yml  ci.yml  export-pipeline-pubkeys.yml  warm-release-cache.yml
FSD/: CEG_RC1_BIFURCATION.md  CIRIS_EDGE.md  EDGE_OUTBOUND_QUEUE.md  OPEN_QUESTIONS.md  REPLICATION_WIRE_FORMAT_V1.md
benches/: accord_threshold_verify.rs  content_fetch_roundtrip.rs  dispatch_inbound.rs  envelope_canonicalize.rs  envelope_verify.rs  inline_text_pipeline.rs  outbound_enqueue.rs  realtime_av_fanout.rs  realtime_av_mesh_e2e.rs  realtime_av_rekey.rs  realtime_av_relay.rs  steward_fanout.rs  subscription_throughput.rs  transport_http_loopback.rs  transport_reticulum_loopback.rs
benches/common/: mock_directory.rs  mock_signer.rs  mock_transport.rs  mod.rs
bindings/kotlin/ai/ciris/edge/: ciris_edge.kt
bindings/python/: ciris_edge.py
bindings/swift/: CIRISEdge.swift  CIRISEdgeFFI.h  CIRISEdgeFFI.modulemap
conformance_vectors/19_7/aggregation_meta/: canonical_bytes.json  canonical_bytes_v2.json
conformance_vectors/19_7/member_commitment/: empty.json  single.json  three_unsorted.json
docs/: BENCHMARKS.md  FEDERATION_SCALING_MODEL.md  HTTPS_DEPLOYMENT.md  NETWORK_CAPACITY_MODEL.md  PYPI_PUBLISH.md  RELEASE_NOTES.md  ROADMAP_TO_V4.md  STANDARDS_COMPARISON.md  THREAT_MODEL.md  V3_8_0_BENCHMARK_COMPARISONS.md  V3_8_0_RECOMMENDED_STACK.md  V3_8_0_SOTA_VALIDATION.md
python/ciris_edge/: __init__.py
python/ciris_edge/uniffi_bindings/: __init__.py
src/: announce_suppression.rs  cohort_scope.rs  directory_cache.rs  directory_cache_driver.rs  edge.rs  events.rs  handler.rs  identity.rs  key_boundary.rs  lib.rs  log_throttle.rs  manifest.rs  multimedia.rs  observability.rs  outbound.rs  reachability.rs  sas.rs  sas_wordlist.rs  scope_privacy.rs  verify.rs  version.rs
src/blob_swarm/: mod.rs
src/debug/: mod.rs
src/detector/: mod.rs  probe_pattern_observer.rs
src/emission/: budget.rs  envelope.rs  fragment.rs  mod.rs  poisson.rs  scheduler.rs
src/ffi/: mod.rs  pyo3.rs  uniffi_impl.rs  uniffi_impl_links.rs  uniffi_impl_routing.rs  uniffi_types.rs
src/holonomic/: aggregation.rs  consent_decay.rs  deterministic_topology.rs  fountain_defaults.rs  mod.rs  multiplicity.rs  recursive_trust_bootstrap.rs  swarm_rarity.rs  wholeness_witness.rs  witness_chain_split.rs
src/messages/: mod.rs
src/mls/: archive_mode.rs  mod.rs  scope_state.rs  welcome_wrap.rs
src/replication/: bridge.rs  coordinator.rs  directory.rs  mod.rs  protocol.rs  registry.rs  runtime.rs  scheduler.rs  session.rs  storage_contention.rs  summary.rs  wire_frame.rs
src/swarm/: diversity.rs  mod.rs  persist_fountain_evict.rs  runtime.rs
src/transport/: addressing.rs  attestation.rs  federation_session.rs  http.rs  mod.rs  realtime_av.rs  realtime_av_dispatcher.rs  realtime_av_mls.rs  realtime_av_relay.rs  realtime_av_session.rs  reticulum.rs  store_and_forward.rs
src/transport/packet_radio/: driver.rs  frame.rs  mod.rs
src/transport/realtime_av_alm/: capacity.rs  heal.rs  join.rs  mod.rs
src/transport/realtime_av_codec/: av1.rs  fountain.rs  mod.rs  opus_voice.rs
tests/: accord_carrier_verify.rs  active_roster_e2e.rs  agent_mode_init.rs  blob_swarm_scheduler.rs  bridge_combinator_e2e.rs  canonical_peer.rs  ceg_content_discipline.rs  cohort_scope_persist_backed.rs  cohort_scope_refusal.rs  conformance_vectors_v19.rs  conformance_vectors_v19_7.rs  content_fetch.rs  delegation_reads_e2e.rs  directory_cache_driver.rs  directory_cache_e2e.rs  explicit_hash_addressing.rs  federation_announcement.rs  fountain_hard_delete_path.rs  fragmentation_reassembly.rs  goal_declaration_retirement.rs  https_per_messagetype_roundtrip.rs  https_pyedge_init.rs  key_boundary_scope.rs  leviculum_interface_diversity.rs  links_ffi.rs  multimedia_tier.rs  observability_metrics.rs  observability_tracing.rs  opaque_conformance.rs  peer_mutation_ffi.rs  poisson_emission_e2e.rs  probe_pattern_observer_integration.rs  pruner_lifecycle.rs  reachability_integration.rs  realtime_av_dispatcher_e2e.rs  relay_multi_tier_inner_byte_identity.rs  replication_wire_proptest.rs  reticulum_av42.rs  reticulum_loopback.rs  route_table_e2e.rs  (+19 more)
tests/common/: mod.rs
tools/: README.md  debug_attach.sh  race_repro.py
tools/scenarios/: durable_send_postgres.py  durable_send_sqlite.py
udl/: ciris_edge.udl
