[package]
name = "ciris-edge"
version = "0.10.1"
edition = "2021"
rust-version = "1.75"
authors = ["Eric Moore <mooreericnyc@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "Reticulum-native federation transport for the CIRIS stack"
repository = "https://github.com/CIRISAI/CIRISEdge"
readme = "README.md"
publish = false

# Status: v0.4.0 — authenticated Reticulum peer resolution. The
# PeerResolver cold-start path (CIRISEdge#15 / CIRISVerify#28 Phase 3)
# replaces v0.3.1's trust-on-first-use announce-recording: an announce
# carries a federation-key-signed transport-identity attestation that
# the resolver roots against persist's federation_keys directory
# (ciris-persist v1.12.0 `root_binding`) before verifying the
# attestation signature — AV-42 closure. Verify pipeline, durable
# outbound queue + dispatcher, typed handler dispatch, outbound
# inline-text pipeline, HTTP transport, and the Reticulum transport
# (Leviculum-backed; OQ-07) all shipped. PyO3 surface and Phase 3
# multi-medium transports (LoRa / serial / I²P) follow.
# See FSD/CIRIS_EDGE.md for the architecture, MISSION.md for M-1
# alignment per module, docs/THREAT_MODEL.md for the v0.1.0 P0
# invariants (AV-9 + AV-13 + AV-14 + AV-17 + hybrid-verify-via-persist)
# and AV-42 for the authenticated-binding cold-start path.

[dependencies]
# Substrate. Owns federation_keys directory, canonicalize_envelope,
# steward seeds (OS-keyring), verify_hybrid_via_directory primitive,
# edge_outbound_queue table + Engine surface for send_durable.
# v2.7.0 (CIRISPersist#104/#105/#106/#108/#109) shipped the PyCapsule
# cohabitation accessors — `federation_directory_capsule` /
# `outbound_queue_capsule` / `keyring_signer_capsule` `#[pymethod]`s
# on `PyEngine` — that v0.9.2 edge consumes to construct an `Edge`
# over the host's already-bootstrapped engine WITHOUT relying on
# cross-module PyClass identity (the v0.9.1 cohabitation regression).
# v2.8.0 (CIRISPersist#111) adds `runtime_handle_capsule` — the
# fourth capsule accessor that closes the cross-cdylib **statics**
# regression v0.10.0 hit: persist's `ENGINE_SINGLETON` static is
# duplicated per-`.so`, so the consumer's `current_runtime_handle()`
# always returned `None` in cross-wheel production deployments
# (CIRISConformance v0.10.0 init_handshake failure). The capsule
# sources the runtime from `self.runtime.handle().clone()`,
# sidestepping the static lookup entirely. v0.10.1 edge consumes
# this — see [`extract_capsule`] in `src/ffi/pyo3.rs`.
# Also exposes `list_keys_by_identity_type` on FederationDirectory
# (v2.6.0) — consumed by CIRISEdge#19 AccordCarrier wire-layer
# 2-of-3 verify (accord_holder enumeration) and #20 steward addressing
# (steward enumeration). The Option-B `pub fn` accessors
# (CIRISPersist#95, v2.0.2+) remain for sibling cdylibs that share
# persist's compiled-in PyTypeInfo; edge uses the capsule path
# because we cross extension-module boundaries (separate wheels).
# See ../CIRISPersist/MISSION.md and FSD/EDGE_OUTBOUND_QUEUE.md.
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v2.8.0", version = "2", features = ["sqlite"] }
# Keyring — Ed25519 + ML-DSA-65 hardware/software signers used by
# Edge::send and Edge::send_durable to sign outbound envelopes.
# Pinned to v3.0.1 — major bump in lockstep with persist v2.0.2's
# cohabitation cut. v3.0.1 drops the v2.1.x hardcoded-steward
# fallback (#29 deferral); `load_local_seed` / `LocalSeedConfig`
# surface unchanged on edge's consumed paths.
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v3.0.1", version = "3", features = ["software", "pqc-ml-dsa"] }
ciris-crypto  = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v3.0.1", version = "3", features = ["ed25519", "pqc-ml-dsa"] }

# Async runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
futures     = "0.3"

# Wire format / serde. RawValue is required for canonical-bytes
# preservation per FSD §3.4 — we sign canonical bytes and verify the
# exact same canonical bytes, never re-serializing a Value.
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["raw_value"] }
chrono      = { version = "0.4", features = ["serde"] }

# Hashing — body_sha256 forensic join key + in_reply_to ACK matching.
sha2        = "0.10"
base64      = "0.22"

# Errors / logs
thiserror   = "1"
tracing     = "0.1"

# IDs
uuid        = { version = "1", features = ["v4", "serde"] }

# CIRISEdge#29 (v0.11.0) — `parking_lot::RwLock` backs
# `ReachabilityTracker`'s per-(peer, medium) map. Chosen over
# `dashmap` (extra license surface, contention-tuning we don't need)
# and `std::sync::RwLock` (slower uncontended path, less predictable
# fairness). Already a transitive dep via tokio's `parking_lot`
# feature; the explicit pin is a single MIT-licensed surface (per
# deny.toml § licenses.allow) and makes the dep audit-explicit.
parking_lot = "0.12"

# HTTP transport — feature-gated below
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1",   optional = true, features = ["client", "server", "http1"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }

# CIRISEdge#23 (Track B / v0.13.0 cut) — HTTPS transport hardening.
# Promotes the `transport-http` feature from "Reticulum-unreachable
# fallback" to production-grade, fully-equivalent transport carrying
# every wire type. The acceptance bar is "every MessageType::*
# round-trips over HTTPS" — same `dispatch_inbound` pipeline.
#
# Server-side TLS: `axum-server` (rustls integration) accepts a
# `rustls::ServerConfig`; that config carries either a no-auth
# verifier (TLS-only) or a custom `ClientCertVerifier` whose
# `verify_client_cert` consults persist's `federation_keys`
# directory via `VerifyDirectory::lookup_public_key` and rejects
# unknown CNs at handshake time. This is the surface that CIRIS
# Accord §I (Fidelity & Transparency) requires for the mTLS deployment
# path — no application-layer auth running on top of an unauthenticated
# socket.
#
# Bearer-token path: `jsonwebtoken` decodes a federation-key-signed
# JWT (Ed25519 via `Algorithm::EdDSA`). The directory's
# `pubkey_ed25519_base64` is the verification key. Use behind
# TLS-terminating CDNs where mTLS isn't feasible.
#
# Licenses (verified against deny.toml § licenses.allow):
#   rustls 0.23.x         — Apache-2.0 / ISC / MIT (triple-licensed)
#   rustls-pemfile 2.x    — Apache-2.0 / ISC / MIT
#   tokio-rustls 0.26.x   — Apache-2.0 / MIT
#   axum-server 0.7.x     — MIT
#   jsonwebtoken 9.x      — MIT
#   x509-parser 0.16.x    — MIT / Apache-2.0
# All resolve under the existing allowlist (no deny.toml change).
rustls         = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = { version = "2",    optional = true }
tokio-rustls   = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
axum-server    = { version = "0.7",  optional = true, features = ["tls-rustls-no-provider"] }
jsonwebtoken   = { version = "9",    optional = true, default-features = false }
# `x509-parser` is the minimal X.509 sniff the mTLS verifier needs to
# pull CN + Ed25519 SPKI out of the client cert. Federation identity is
# rooted in persist (not a CA), so we don't need a full PKI engine —
# just a CN string and 32-byte raw key.
x509-parser    = { version = "0.16", optional = true }

# Reticulum transport — feature-gated below. Backed by Leviculum
# (reticulum-core + reticulum-std, workspace v0.6.3, AGPL-3.0), the
# canonical Reticulum stack for edge (OQ-07 first impl; Beechat's
# reticulum-rs was spiked and rejected — broken link data path).
#
# Pinned to the CIRISAI/leviculum fork rather than teranos/leviculum
# upstream: upstream's tree references a `vendor/Reticulum` git
# submodule at a SHA force-removed from markqvist/Reticulum, and cargo
# fetches a git dependency's submodules recursively — so the upstream
# repo cannot resolve as a cargo git dep. The fork strips the three
# dead integ-harness submodules (commit a7e1102); reticulum-core +
# reticulum-std build untouched. Fork tracks teranos/leviculum, whose
# base carries the macOS-compat commits edge's darwin CI needs.
reticulum-core = { git = "https://github.com/CIRISAI/leviculum", rev = "a7e11028af137229ce22490879a1a6fd45af7ebe", version = "0.6", optional = true }
reticulum-std  = { git = "https://github.com/CIRISAI/leviculum", rev = "a7e11028af137229ce22490879a1a6fd45af7ebe", version = "0.6", optional = true }

# ─── Optional transports — gated per OQ-02, OQ-07, OQ-13 ────────────
# Implementations land in subsequent commits; features declared now so
# downstream pin contracts are stable from v0.1.0.

[features]
default = []

# Phase 1 — HTTP/HTTPS fallback for Reticulum-unreachable deployments.
# CIRISEdge#23 (Track B / v0.13.0) — promoted to production-grade
# HTTPS transport: server-side TLS via axum-server, client-side TLS
# via reqwest's rustls stack, mTLS handshake checks the client cert's
# CN against persist's federation_keys via
# `VerifyDirectory::lookup_public_key`, and a bearer-token (federation-
# key-signed JWT) path covers CDN/TLS-termination deployments.
transport-http        = [
    "dep:axum",
    "dep:tower",
    "dep:hyper",
    "dep:reqwest",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:axum-server",
    "dep:jsonwebtoken",
    "dep:x509-parser",
]

# Phase 1 — Reticulum canonical wire (OQ-07 first impl). Backed by
# Leviculum's reticulum-core + reticulum-std. `TransportId::RETICULUM_RS`
# is the metrics tag; the impl lives in `src/transport/reticulum.rs`.
transport-reticulum   = ["dep:reticulum-std", "dep:reticulum-core"]

# Phase 3 — additional transports, productionized when community uptake
# justifies (OQ-13).
# transport-lora        = []
# transport-serial      = []
# transport-i2p         = []

# pyo3 — Python bindings for the lens FastAPI cutover (Phase 1)
# and the agent Python pipeline (Phase 2). Same FFI-shell discipline
# persist uses (CIRISPersist src/ffi/pyo3.rs); abi3 single-wheel
# per-(os,arch) ships via maturin.
#
# v0.5.0 — turns on `ciris-persist/pyo3` so `init_edge_runtime`
# (the CIRIS 3.0 cohabitation constructor, CIRISEdge#16) can reach
# `ciris_persist::ffi::pyo3::PyEngine` Rust-side. persist's `pyo3`
# feature also implies `postgres`; that is intentional — the
# cohabiting agent's `PyEngine` may carry either backend variant of
# `BackendDispatch` and edge must match both at runtime.
# `pyo3` implies `transport-reticulum` — the cohabitation `init_edge_runtime`
# (and its module-private imports) is the whole point of the Python surface,
# and Reticulum is the canonical cohabitation wire (MISSION §1.4). Without
# this, the maturin wheel build (`features = ["pyo3"]` per pyproject) leaves
# the reticulum-gated items unused and `-D warnings` fails the build.
pyo3                  = ["dep:pyo3", "ciris-persist/pyo3", "transport-reticulum"]

# v0.7.0 (CIRISEdge#17) — `extension-module` split out of the `pyo3`
# feature, mirroring CIRISPersist's discipline (persist v2.0.6+).
# `pyo3/extension-module` tells PyO3 not to link libpython, which is
# correct for wheel builds (the host interpreter provides the symbols
# at import time) but breaks `cargo test --features pyo3` because tests
# need to link libpython for in-process Python-from-Rust embedding.
# Wheel builds invoke `--features "pyo3 extension-module"`; test +
# lint builds invoke `--features pyo3` and link libpython normally.
# pyproject.toml's `[tool.maturin]` features list adds the extra flag.
extension-module      = ["pyo3?/extension-module"]

[dependencies.pyo3]
version  = "0.28"
# v0.7.0 (CIRISEdge#17) — `abi3-py310`, not `abi3-py311`. Chaquopy
# bundles Python 3.10 (Android mobile cohabitation, CIRISPersist#96–99
# precedent); abi3 is forward-compatible so a py310-tagged wheel runs
# on 3.11 / 3.12 / 3.13 too — bumping the floor down is purely an
# expansion of compatibility, not a regression for the existing PyPI
# consumers. `extension-module` removed from this list — it's now its
# own top-level feature (see above).
features = ["abi3-py310"]
optional = true

[lib]
# v0.1.0-pre1 — explicit crate-type so maturin can build the PyO3
# extension AND `cargo test` / downstream `cargo` consumers still
# get the `rlib`. Mirrors CIRISPersist Cargo.toml.
crate-type = ["cdylib", "rlib"]

# Build-manifest extras emitter — mirrors CIRISPersist's
# `emit_persist_extras` and CIRISLens's `emit_lens_extras.py`.
# Invoked by `.github/workflows/ci.yml::build-manifest` to produce
# the EdgeExtras JSON that ciris-build-sign embeds in the signed
# BuildManifest (OQ-12 closure).
[[bin]]
name = "emit_edge_extras"
path = "src/bin/emit_edge_extras.rs"

# ─── Criterion benches (docs/BENCHMARKS.md) ─────────────────────────
#
# `harness = false` per criterion convention: disables Rust's default
# `#[test]` harness so criterion's own `criterion_main!()` runs.
# Bench files live in `benches/`; shared fixtures in `benches/common/`.
#
# Default-feature benches (no transport / no pyo3) — run on every
# `cargo bench --workspace`:
#
#   envelope_canonicalize, envelope_verify, dispatch_inbound,
#   outbound_enqueue, accord_threshold_verify, steward_fanout,
#   content_fetch_roundtrip, inline_text_pipeline
#
# Feature-gated benches — must be invoked with the matching `--features`:
#
#   transport_reticulum_loopback (transport-reticulum)
#   transport_http_loopback      (transport-http)
#   subscription_throughput      (pyo3)
#
# Per the BENCHMARKS.md "Running" section, the CI workflow
# (.github/workflows/bench.yml) drives all three feature sets in
# sequence.

[[bench]]
name = "envelope_canonicalize"
harness = false

[[bench]]
name = "envelope_verify"
harness = false

[[bench]]
name = "dispatch_inbound"
harness = false

[[bench]]
name = "outbound_enqueue"
harness = false

[[bench]]
name = "accord_threshold_verify"
harness = false

[[bench]]
name = "steward_fanout"
harness = false

[[bench]]
name = "content_fetch_roundtrip"
harness = false

[[bench]]
name = "inline_text_pipeline"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false
required-features = ["pyo3"]

[[bench]]
name = "transport_reticulum_loopback"
harness = false
required-features = ["transport-reticulum"]

[[bench]]
name = "transport_http_loopback"
harness = false
required-features = ["transport-http"]

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
proptest = "1"
# Reticulum loopback + authenticated-resolution acceptance tests
# (tests/reticulum_loopback.rs, tests/reticulum_av42.rs). `hex`
# encodes the scrub-signed federation_keys rows the AV-42 cold-start
# fixtures seed the persist directory with.
tempfile           = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex                = "0.4"
sha2               = "0.10"
# v0.10.x — criterion bench harness (docs/BENCHMARKS.md). The
# `html_reports` feature produces the per-bench HTML report uploaded
# by .github/workflows/bench.yml as the `criterion-report` artifact;
# the text summary lands as `bench-results-txt`. Same cadence as
# CIRISVerify's bench.yml (push-to-main + workflow_dispatch).
criterion          = { version = "0.5", features = ["html_reports", "async_tokio"] }
async-trait        = "0.1"
# v0.6.0 — `tests/federation_announcement.rs` (CIRISEdge#18) drives
# persist's `put_delivery_attestation` / `list_delivery_attestations`
# admission surface — those methods live behind persist's `cirisnode`
# feature flag. Cargo merges dependency-feature sets, so adding the
# flag here lights up the symbols for the test-build only without
# changing edge's normal-build dependency surface.
#
# v0.10.x — `classify` + `scrub` features added so the
# `inline_text_pipeline` bench (docs/BENCHMARKS.md) can construct
# `default_outbound_pipeline::<InlineTextEnvelope>()` (Classify +
# Scrub) over the persist pipeline surface. Dev-deps only; the normal
# edge build does not pull these.
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v2.8.0", version = "2", features = ["sqlite", "cirisnode", "classify", "scrub"] }
# CIRISEdge#23 — `tests/transport_http_hardening.rs` mints self-signed
# Ed25519 certs on the fly to exercise the rustls server config + the
# custom `FederationCnVerifier`. `rcgen` is the canonical Rust X.509
# generator; license: MIT / Apache-2.0. Dev-only — no production
# dep-tree impact.
rcgen              = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# rcgen's `KeyPair::from_pkcs8_der_and_sign_algo` takes a
# `rustls_pki_types::PrivatePkcs8KeyDer`; explicit dev-dep so the
# test file can name the type.
rustls-pki-types   = "1"

[lints.rust]
# v0.9.2 (CIRISEdge#22 cohabitation) — relaxed from `forbid` to `deny`.
# `PyCapsule` extraction is the load-bearing primitive for cross-wheel
# cohabitation handoff (CIRISPersist#109) and is inherently unsafe at
# the FFI surface (no compile-time type check; the consumer trusts the
# producer's capsule name tag + wrapped type). The carve-out is
# scoped to the single `extract_capsule` helper in `src/ffi/pyo3.rs`;
# everywhere else in the crate, `unsafe` is still rejected.
unsafe_code = "deny"

[lints.clippy]
all     = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic relaxations:
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
# Skeleton-phase concessions — drop these when bodies fill in:
#  - unused_async: skeleton fns are async because their final form will be;
#    clippy can't see through todo!() to the eventual .await calls.
#  - doc_markdown: pedantic complaint about identifiers in docs not having
#    backticks. Not load-bearing for correctness; defer the cleanup pass
#    until the doc surface stabilizes.
unused_async = "allow"
doc_markdown = "allow"
